--- a/src/App.css
+++ b/src/App.css
@@ -29,25 +29,21 @@ body {
   list-style: none;
 }
 
-.list li a{
+.list li a {
   text-decoration: none;
   color: white;
 }
 
-.images-container{
+.images-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-
+  gap: 10px;
 }
 
-
-
-.images-container img{
+.images-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-
 }
 
 .search-inp {
@@ -63,4 +59,37 @@ body {
 
 h1 {
   margin-bottom: 20px;
+}
+
+/* Modal */
+/* Modal */
+
+.modal-overlay {
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(256, 256, 256, 0.8);
+}
+
+.modal-content {
+  background-color: #fff;
+  border: 1px solid red;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+  color: black;
+  min-width: 600px;
+  min-height: 600px;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto;
 }
